# anonymous-chat

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.develop.yml  pyproject.toml  test_py.py
alembic/: env.py
alembic/versions/: 0f55e2a5cfcc_create_tables.py  3bf820e9ac0b_create_user_table.py  61fd5964bb80_modification_user_table.py
docs/chat/: chat_endpoints.md
docs/users/: user_endpoint.md
nginx-conf/: default-develop.template
src/: __init__.py  database.py  main.py
src/enums/: status_enums.py
src/managers/: user_managers.py
src/models/: user_models.py
src/routers/: __init__.py  chat_router.py  user_router.py
src/schemas/: base_schemas.py  user_schemas.py
src/services/: chat_services.py  user_services.py
src/tests/: chat_test.py  user_test.py
tests/: chat_test.py  test_config.py  user_test.py
